--- a/src/pages/resources/videos/2024-01-16-rupert.md
+++ b/src/pages/resources/videos/2024-01-16-rupert.md
@@ -3,6 +3,6 @@ templateKey: video-post
 title: Rupert!
 date: '2024-01-16T15:13:18-05:00'
 description: He is a scabby little devil aint he
-videofile: /img/blog-index.jpg
+videofile: https://www.youtube.com/watch?v=8qURdm4_QZI
+videoURL: https://www.youtube.com/watch?v=8qURdm4_QZI
 ---
-
