Update Videos “2024-01-16-rupert”

--- a/src/pages/resources/videos/2024-01-16-rupert.md
+++ b/src/pages/resources/videos/2024-01-16-rupert.md
@@ -1,7 +1,10 @@
 ---
 templateKey: video-post
-title: Rupert!
+title: Creeper Coaster Part 1
 date: '2024-01-16T15:13:18-05:00'
-description: He is a scabby little devil aint he
-videoURL: https://www.youtube.com/watch?v=8qURdm4_QZI
+description: >-
+  It's Not Your Normal Roller Coaster It Is Your Creeper Roller Coaster Watch
+  Part 2!
+videoURL: 'https://www.youtube.com/watch?v=JsfRG-kfi0s&t=164s'
 ---
+
