--- a/src/pages/resources/videos/2024-01-16-rupert.md
+++ b/src/pages/resources/videos/2024-01-16-rupert.md
@@ -6,5 +6,6 @@ description: >-
   It's Not Your Normal Roller Coaster It Is Your Creeper Roller Coaster Watch
   Part 2!
 videoURL: 'https://www.youtube.com/watch?v=JsfRG-kfi0s&t=164s'
+presentors:
+  - Angela Satchell
 ---
-
