Update Videos “2024-01-16-rupert”

--- a/src/pages/resources/videos/2024-01-16-rupert.md
+++ b/src/pages/resources/videos/2024-01-16-rupert.md
@@ -1,8 +1,9 @@
 ---
 templateKey: video-post
-videoURL: https://www.youtube.com/watch?v=AUue2E8CB3U
+videoURL: >-
+  https://us06web.zoom.us/rec/play/-Wok3T5TAW1y2vZCcGsaq_2FR2aZa-KIkAl39XP7X-gWiKuYT3qvF5x08vAOXOTLJptpBGwqSL3ZphCv.0rD2Y_FkstDa_RYw?canPlayFromShare=true&from=share_recording_detail&continueMode=true&componentName=rec-play&originRequestUrl=https%3A%2F%2Fus06web.zoom.us%2Frec%2Fshare%2FSifjrb8JZPCSA3pcbSAi3nQCQZLyDjRJvRWY0Ugsl6A7zhMJPaUs3aEmTs01QgI._elouHUu2aSu80Cn
 featuredpost: false
-title: "Playing Off the Page: Education and Leadership in the 21st Century"
+title: 'Playing Off the Page: Education and Leadership in the 21st Century'
 date: 2021-09-27T19:13:18.000Z
 description: >-
   What must leaders in education instill in those they mentor? As we step into
@@ -16,7 +17,18 @@ description: >-
   composition.
 
 
-  As a performer, he has played at creative music venues in NYC and Denver such as Dazzle, Roulette, and The Stone. As a composer, his commissions have included works for jazz band, choir, and various solo instruments, as well as interdisciplinary works for theater, dance, and film. As an educator, he has led master classes and workshops at the New School, MSU Denver, University of Indiana, the Royal Academy of Music in London, and many others, both as a soloist and in collaboration with other teaching artists. Evan received a Bachelors degree in piano performance and a Masters in jazz studies from the University of Iowa. This talk was given at a TEDx event using the TED conference format but independently organized by a local community. Learn more at https://www.ted.com/tedx
+  As a performer, he has played at creative music venues in NYC and Denver such
+  as Dazzle, Roulette, and The Stone. As a composer, his commissions have
+  included works for jazz band, choir, and various solo instruments, as well as
+  interdisciplinary works for theater, dance, and film. As an educator, he has
+  led master classes and workshops at the New School, MSU Denver, University of
+  Indiana, the Royal Academy of Music in London, and many others, both as a
+  soloist and in collaboration with other teaching artists. Evan received a
+  Bachelors degree in piano performance and a Masters in jazz studies from the
+  University of Iowa. This talk was given at a TEDx event using the TED
+  conference format but independently organized by a local community. Learn more
+  at https://www.ted.com/tedx
 presentors:
   - Evan Mazunik
 ---
+
